--- a/style.css
+++ b/style.css
@@ -5,31 +5,24 @@ html {
 }
 
 body {
-  color: #333;
-  font-size: 1.2rem;
   font-family: "Hiagino Kaku Gothic Pron", Meiryo, sans-serif;
-  text-align: center;
+  margin: 0;
+  height: 100vh;
   display: flex;
+  justify-content: center;
   flex-direction: column;
   align-items: center;
   background: orange;
-  height: 600px;
-  position: relative;
+
 }
 
 h1 {
   color: #333;
-  position: absolute;
-  top: 20%;
-  -webkit-transform: translateY(-20%);
   transform: translateY(-20%);
 }
 
 #calendar {
   padding: 10px 10px 10px 50px;
-  position: absolute;
-  top: 40%;
-  -webkit-transform: translateY(-40%);
   transform: translateY(-40%);
 }
 
@@ -41,14 +34,10 @@ h1 {
   font-size: 3rem;
   outline: none;
   margin-top: 20px;
-  position: absolute;
-  top: 50%;
-  -webkit-transform: translateY(-50%);
   transform: translateY(-50%);
 }
 
 #showDOB, #showdiffDate, #show17yNmonth {
   display: flex;
-  height: 100%;
   align-items: center;
 }
